--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "rxjs": "^7.5.1",
-    "sequelize": "^6.17.0",
+    "sequelize": "^6.31.1",
     "sequelize-mock": "^0.10.2",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
-    "sqlite3": "5.0.11",
+    "sqlite3": "^5.1.6",
     "toad-scheduler": "^1.6.0",
     "updeep": "^1.2.1",
     "uuidv4": "^6",
