--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.26",
   "private": true,
   "bin": "build/server.js",
-  "type": "module",
+  "type": "commonjs",
   "engines": {
     "node": ">=16.0.0"
   },
@@ -83,7 +83,7 @@
     "lint-staged": "^11.2.6",
     "mocha": "^9.2.0",
     "prettier": "^2.4.1",
-    "semver": "^7.3.5",
+    "semver": "^7.5.1",
     "sinon": "^12.0.1",
     "standard-version": "^9.3.2",
     "supertest": "^6.1.6"
