build: fix mount pvc

--- a/deployments/charts/climate-warehouse/templates/deployment.yaml
+++ b/deployments/charts/climate-warehouse/templates/deployment.yaml
@@ -64,5 +64,5 @@ spec:
       {{- end }}
       volumes:
         - name: config
-          configMap:
-            name: {{ include "climate-warehouse.fullname" . }}-config
+          persistentVolumeClaim:
+            claimName: {{ include "climate-warehouse.fullname" . }}-config
