chore: add `helm` gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@ yarn-error.log*
 
 build-scripts/macos/application
 build-scripts/macos/target
+
+# Created by https://www.toptal.com/developers/gitignore/api/helm
+# Edit at https://www.toptal.com/developers/gitignore?templates=helm
+
+### Helm ###
+# Chart dependencies
+**/charts/*.tgz
+
+# End of https://www.toptal.com/developers/gitignore/api/helm
